gen csharp add langswitch, gen utf8 always